--- a/css/map.css
+++ b/css/map.css
@@ -68,6 +68,30 @@ ul {
     overflow: auto;
 }
 
+.sidebar-item{
+	padding: 10px;
+	background: rgb(0,170,113);
+	color: white;
+	margin: 6px;
+	cursor: pointer;
+	border-radius: 10px;
+}
+
+.sidebar-item:hover {
+	background: #e0e0e0;
+	color: black;
+	font-size: 105%;
+	transition: all 0.5s ease-in-out;
+}
+
+.sidebar-box{
+	color: white;
+	text-align: center;
+    background-color: rgb(0,128,26);
+    border-radius: 20px;
+	padding: 10px;
+}
+
 .content {
 	grid-area: content;
 }
