--- a/css/about.css
+++ b/css/about.css
@@ -239,12 +239,12 @@ input[type="checkbox"]{
   border: none;
   outline: 0;
   display: inline-block;
-  padding: 8px;
+  padding: 12px;
   color: white;
   background-color: #59aa84;
   text-align: center;
   cursor: pointer;
-  width: 100%;
+  width: 50px 50px;
   border-radius: 20px;
 }
 
