--- a/css/about.css
+++ b/css/about.css
@@ -11,8 +11,7 @@ html, body , .container {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Lato', sans-serif;
-  font-family: 'Oswald', sans-serif;
+  font-family: 'Ropa Sans';
 }
 .wrapper{
   position: fixed;
