--- a/css/home.css
+++ b/css/home.css
@@ -67,8 +67,7 @@ h2 {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Lato', sans-serif;
-  font-family: 'Oswald', sans-serif;
+  font-family: 'Ropa Sans';
 }
 .wrapper{
   position: fixed;
