--- a/css/about.css
+++ b/css/about.css
@@ -24,7 +24,7 @@ html, body , .container {
   /*background: linear-gradient(90deg, #f92c78, #4114a1);*/
   /* background: linear-gradient(375deg, #1cc7d0, #2ede98); */
  /* background: linear-gradient(-45deg, #e3eefe 0%, #efddfb 100%);*/
-  transition: all 0.6s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 #active:checked ~ .wrapper{
   /*left: 0;*/
@@ -189,6 +189,11 @@ input[type="checkbox"]{
         background-color:aliceblue;
         border-spacing: 40px;
         border-radius: 20%;
+    }
+
+    .center {
+      margin-left: auto;
+      margin-right: auto;
     }
 
 /* *********************************************************
