--- a/css/analysis.css
+++ b/css/analysis.css
@@ -23,6 +23,7 @@ h2 {
 p {
   margin:20px;
   font-size: 18px;
+  line-height: 20px;
 }
 
 /* *********************************************************
@@ -55,7 +56,7 @@ background: rgb(0,128,26);
 /*background: linear-gradient(90deg, #f92c78, #4114a1);*/
 /* background: linear-gradient(375deg, #1cc7d0, #2ede98); */
 /* background: linear-gradient(-45deg, #e3eefe 0%, #efddfb 100%);*/
-transition: all 0.6s ease-in-out;
+transition: all 0.3s ease-in-out;
 }
 #active:checked ~ .wrapper{
 /*left: 0;*/
