--- a/css/data.css
+++ b/css/data.css
@@ -18,6 +18,7 @@ html, body , .container {
   
   p {
     margin:20px;
+    line-height: 20px;
   }
 
 /* *********************************************************
@@ -50,7 +51,7 @@ html, body , .container {
   /*background: linear-gradient(90deg, #f92c78, #4114a1);*/
   /* background: linear-gradient(375deg, #1cc7d0, #2ede98); */
  /* background: linear-gradient(-45deg, #e3eefe 0%, #efddfb 100%);*/
-  transition: all 0.6s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 #active:checked ~ .wrapper{
   /*left: 0;*/
