--- a/css/analysis.css
+++ b/css/analysis.css
@@ -18,6 +18,12 @@ html, body , .container {
   
 p {
   margin:20px;
+  margin-right: 80;
+  margin-right: 80;
+
+
+
+
   font-size: 18px;
   line-height: 25px;
 }
