--- a/css/home.css
+++ b/css/home.css
@@ -1,229 +1,117 @@
-html, body , .container {
-    height: 100%;
-    margin: 5px;
+:root{
+    --link:#ffff;
+    --hover:rgb(0,128,26);;
+    --main: #ffff;
+    --bg:rgb(0,128,26);
+    --size:99vmin;
+    --ratio: 1 / 1.1;
+}
+
+body{
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: var(--bg);
     font-family: 'Ropa Sans';
-  }
+    color: var(--main)
 
-.container {  display: grid;
-    grid-template-rows: 15% 75% 10%;
-    grid-template-columns: 50% 50%;
-    gap: 8px 5px;
-    grid-auto-flow: row;
-    grid-template-areas:
-      "logo logo"
-      "slideshow slideshow"
-      "menu menu";
-  }
-  
-h2 {
-    text-align: center;
 }
 
-/* *********************************************************
- Logo and Slideshow Section
-********************************************************* */
-    .logo {
-        grid-area: logo;
-        background: linear-gradient(to bottom left, dark-blue 15%, light-blue);
-        position: relative;
-    }
-    
-    .slideshow { 
-    grid-auto-flow: row;
-    grid-area: slideshow;
-    border-radius: 3px;
-    }
+a{
+    text-decoration: none;
+    color: 000;
 
-    .menu {
-      grid-auto-flow: row;
-      grid-area: menu;
-      border-radius: 3px;
-      min-width: 100%;
-  }
+}
 
-  .button {
-    border: none;
-    outline: 0;
-    display: inline-block;
-    padding: 12px;
-    color: white;
-    background-image:url(https://github.com/tiannachan/BikeIt/blob/106fd2206ef8da36812017cedee75ae426583713/images/lane.jpeg?raw=true);
-    background-color: #59aa84;
-    text-align: center;
+header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-weight: 900;
+    padding: 40px 0;
+
+}
+
+.container{
+    width: calc(var(--size) * var(--ratio));
+    margin: 0 auto;
+
+}
+
+.logo{
+    width: 150px;
+    padding: 10px 0;
     cursor: pointer;
-    width: 19.78%;
-    border-radius: 20px;
-  }
-  
-  .button:hover, .button::selection {
-    background-image:url(https://github.com/tiannachan/BikeIt/blob/106fd2206ef8da36812017cedee75ae426583713/images/lanewithbike.jpeg?raw=true);
-    transition: all 0.3s ease-in-out;
-  }
+    position: relative;
+    text-align: center;
+    border: 3px solid var(--main);
+    font-size: 2.2rem;
+    text-transform: uppercase;
+    font-weight: bold;
+    letter-spacing: 2.5;
+    transition: all 0.2s;
 
-/* *********************************************************
-  Menu Section
-********************************************************* */
-*{
-  box-sizing: border-box;
-  font-family: 'Ropa Sans';
 }
-.wrapper{
-  position: fixed;
-  top: 0;
-  /*left: -100%;*/
-  right: -100%;
-  height: 100%;
-  width: 100%;
-  background: rgb(0,128,26);
-  /*background: linear-gradient(90deg, #f92c78, #4114a1);*/
-  /* background: linear-gradient(375deg, #1cc7d0, #2ede98); */
- /* background: linear-gradient(-45deg, #e3eefe 0%, #efddfb 100%);*/
-  transition: all 0.3s ease-in-out;
+
+.logo:hover{
+    background: var(--main);
+    color: var(--bg);
 }
-#active:checked ~ .wrapper{
-  /*left: 0;*/
-  right:0;
+
+nav{
+    display: felx;
+    
 }
-.menu-btn{
-  position: absolute;
-  z-index: 2;
-  right: 20px;
-  /*left: 20px; */
-  top: 20px;
-  height: 50px;
-  width: 50px;
-  text-align: center;
-  line-height: 50px;
-  border-radius: 50%;
-  font-size: 20px;
-  cursor: pointer;
-  /*color: #fff;*/
-  /*background: linear-gradient(90deg, #f92c78, #4114a1);*/
-  /* background: linear-gradient(375deg, #1cc7d0, #2ede98); */
- /* background: linear-gradient(-45deg, #e3eefe 0%, #efddfb 100%); */
-  transition: all 0.3s ease-in-out;
+
+nav {
+    display: inline-block;
+    color: #ffff;
+    font-size: 1rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    margin-right: 10px;
+    padding: 5px 10px;
+    transition: all 300ms ease-in-out;
+
 }
-.menu-btn span,
-.menu-btn:before,
-.menu-btn:after{
-	content: "";
-	position: absolute;
-	top: calc(50% - 1px);
-	left: 30%;
-	width: 40%;
-	border-bottom: 2px solid rgb(0,128,26);
-	transition: transform .6s cubic-bezier(0.215, 0.61, 0.355, 1);
+
+nav a:hover{
+    color: var(--hover);
+
 }
-.menu-btn:before{
-  transform: translateY(-8px);
+
+.intro{
+    width: 100;
+    text-align: center;
+    overflow: hidden;
+    font-size: 2.2rem;
+    text-transform: uppercase;
+    font-weight: bold;
 }
-.menu-btn:after{
-  transform: translateY(8px);
+
+.intro-title {
+    color: var(--main);
+    font-size: 5rem;
+    text-transform: uppercase;
+    font-weight: bold;
+    margin-top: 10vmin;
 }
 
 
-.close {
-	z-index: 1;
-	width: 100%;
-	height: 100%;
-	pointer-events: none;
-	transition: background .6s;
+
+.btn{
+    display: inline-block;
+    padding: 10px 20px;
+    text-align: center;
+    border: 1px solid #ffff;
+    color: white;
+    cursor: pointer;
+    transition: all 300ms ease-in-out;
+
 }
 
-/* closing animation */
-#active:checked + .menu-btn span {
-	transform: scaleX(0);
-}
-#active:checked + .menu-btn:before {
-	transform: rotate(45deg);
-  border-color: #fff;
-}
-#active:checked + .menu-btn:after {
-	transform: rotate(-45deg);
-  border-color: #fff;
-}
-.wrapper ul{
-  position: absolute;
-  top: 60%;
-  left: 50%;
-  height: 90%;
-  transform: translate(-50%, -50%);
-  list-style: none;
-  text-align: center;
-}
-.wrapper ul li{
-  height: 10%;
-  margin: 15px 0;
-}
-.wrapper ul li a{
-  text-decoration: none;
-  font-size: 30px;
-  font-weight: 500;
-  padding: 5px 30px;
-  color: #fff;
-  border-radius: 50px;
-  position: absolute;
-  line-height: 50px;
-  margin: 5px 30px;
-  opacity: 0;
-  transition: all 0.3s ease;
-  transition: transform .6s cubic-bezier(0.215, 0.61, 0.355, 1);
-}
-.wrapper ul li a:after{
-  position: absolute;
-  content: "";
-  background: #fff;
-   /*background: linear-gradient(#14ffe9, #ffeb3b, #ff00e0);*/
-  /*background: linear-gradient(375deg, #1cc7d0, #2ede98);*/
-  width: 100%;
-  height: 100%;
-  left: 0;
-  top: 0;
-  border-radius: 50px;
-  transform: scaleY(0);
-  z-index: -1;
-  transition: transform 0.3s ease;
-}
-.wrapper ul li a:hover:after{
-  transform: scaleY(1);
-}
-.wrapper ul li a:hover{
-  color: #2ea44f;
-}
-input[type="checkbox"]{
-  display: none;
-}
-.content{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: -1;
-  text-align: center;
-  width: 100%;
-  color: rgb(0,128,26);
-}
-.content .title{
-  font-size: 40px;
-  font-weight: 700;
-}
-.content p{
-  font-size: 35px;
-  font-weight: 600;
-}
+.btn:hover{ 
+  background-color: #ffff;
+  color: var(--bg)
 
-#active:checked ~ .wrapper ul li a{
-  opacity: 1;
-  
 }
-.wrapper ul li a{
-  transition: opacity 1.2s, transform 1.2s cubic-bezier(0.215, 0.61, 0.355, 1);
-  transform: translateX(100px);
-}
-#active:checked ~ .wrapper ul li a{
-	transform: none;
-	transition-timing-function: ease, cubic-bezier(.1,1.3,.3,1); /* easeOutBackを緩めた感じ */
-   transition-delay: .6s;
-  transform: translateX(-100px);
-}
-
