--- a/css/about.css
+++ b/css/about.css
@@ -281,4 +281,5 @@ input[type="checkbox"]{
 /* Add some top padding to the page content to prevent sudden quick movement (as the header gets a new position at the top of the page (position:fixed and top:0) */
 .sticky + .content {
   padding-top: 102px;
+  z-index: -1;
 }
