--- a/css/map.css
+++ b/css/map.css
@@ -8,6 +8,7 @@ body,html {
 #map {
 	height: 100%;
 	border-radius: 30px 30px 0px 0px;
+
 }
 
 body {
@@ -306,6 +307,7 @@ body {
 #active:checked ~ .wrapper{
   /*left: 0;*/
   right:0;
+  z-index: 1;
   
 }
 .menu-btn{
