--- a/css/map.css
+++ b/css/map.css
@@ -12,7 +12,7 @@ body,html {
 
 body {
 	display: grid;
-	grid-template-rows: 13% 7% 74% 6%;
+	grid-template-rows: 13% 7% 73% 5%;
 	grid-template-columns: 22% 78%;
 	grid-template-areas: 
 	"logo menu "
@@ -20,7 +20,6 @@ body {
   "sidebar mapcontent"
 	"sidebar footer ";
 }
-
 
 /* *********************************************************
   Sidebar Section
@@ -180,7 +179,8 @@ body {
 	border-radius: 0px 0px 20px 20px;
 	background-color: rgb(175, 175, 175);
   padding:10px;
-  font-size: smaller;
+  font-size: 15px;
+  line-height: 16.5px;
 }
 
 .explore{
@@ -189,7 +189,8 @@ body {
 	border-radius: 30px 30px 0px 0px;
 	background-color: rgb(220, 225, 226);
   text-align: center;
-  letter-spacing: 2px;
+  letter-spacing: 1.5px;
+  font-size: 16px;
 }
 
 .explore-item{
@@ -207,6 +208,12 @@ body {
 	color: black;
 	font-size: 105%;
 	transition: all 0.5s ease-in-out;
+}
+
+.explore-item:active {
+	background: #e0e0e0;
+	color: black;
+	font-size: 105%;
 }
 
 /* Dropdown Button */
