--- a/css/newabout.css
+++ b/css/newabout.css
@@ -5,8 +5,6 @@ html, body , .container {
     
   }
 
-
-
 /* *********************************************************
   Sticky Header
 ********************************************************* */
@@ -107,10 +105,6 @@ h6{
     margin: 0 0 15px 0;
     color: #333333;
     font-weight: 700;
-}
-img{
-    width: 100%;
-    height: auto;
 }
 .container{
     width: 100%;
@@ -661,3 +655,14 @@ input[type="checkbox"]{
 
 
   
+
+/* *********************************************************
+  Logo Section
+********************************************************* */
+
+.logo {
+  grid-area: logo;
+  background: linear-gradient(to bottom left, dark-blue 15%, light-blue);
+  position: relative;
+}
+
