--- a/css/about.css
+++ b/css/about.css
@@ -13,6 +13,7 @@ html, body , .container {
   padding: 10px 16px;
   background: rgb(255, 255, 255);
   color: #f1f1f1;
+  z-index: 2;
 }
 
 /* Page content */
