--- a/css/data.css
+++ b/css/data.css
@@ -5,17 +5,18 @@ html, body , .container {
   }
 
 .container {  display: grid;
-    grid-template-columns: 0.8fr 1.2fr;
-    grid-template-rows: 0.2fr 2fr 0.5fr 2.1fr;
-    gap: 8px 5px;
     grid-auto-flow: row;
     grid-template-areas:
-      "logo search"
-      "banner banner"
-      "menu menu"
-      "about station-map";
-  }
-  
+      "header header"
+      "body body";
+}
+
+.body {
+  grid-area: body;
+  margin: 80px;
+  margin-top: 20px;
+}
+
   p {
     margin:20px;
     font-size: 18px;
