--- a/css/blog.css
+++ b/css/blog.css
@@ -211,6 +211,7 @@ input[type="checkbox"]{
   padding: 10px 16px;
   background: rgb(255, 255, 255);
   color: #f1f1f1;
+  position: sticky;
 }
 
 /* Page content */
@@ -220,14 +221,15 @@ input[type="checkbox"]{
 
 /* The sticky class is added to the header with JS when it reaches its scroll position */
 .sticky {
-  position: fixed;
+  position: -webkit-sticky;
+  position: sticky;
   top: 0;
-  width: 100%
+
 }
 
 /* Add some top padding to the page content to prevent sudden quick movement (as the header gets a new position at the top of the page (position:fixed and top:0) */
 .sticky + .content {
-  padding-top: 102px;
+  padding-top: 10px;
 }
 
 
