--- a/css/about.css
+++ b/css/about.css
@@ -42,20 +42,32 @@ html, body , .container {
  Proposal Button
 ********************************************************* */
 .button {
-    border: none;
     outline: 0;
     display: inline-block;
     padding: 14px;
     color: white;
-    background-color: rgb(0,128,26);
+    background-color: #2ea44f;
     text-align: center;
     cursor: pointer;
     width: 50px 50px;
-    border-radius: 20px;
+    border-radius: 6px;
+    box-shadow: rgba(27, 31, 35, .1) 0 1px 0;
+    box-sizing: border-box;
+    cursor: pointer;
+    font-weight: 600;
+    line-height: 20px;
+    padding: 6px 16px;
+    position: relative;
+    touch-action: manipulation;
+    vertical-align: middle;
+    white-space: nowrap;
   }
   
   .button:hover {
-    background-color: #9DBFAF;
+    background: #e0e0e0;
+    color: black;
+    font-size: 105%;
+    transition: all 0.5s ease-in-out;
   }
   
 
