--- a/css/data.css
+++ b/css/data.css
@@ -254,16 +254,18 @@ th {
   padding-top: 102px;
 }
 
-
-
+/* *********************************************************
+  Tableau Settings
+********************************************************* */
 
 .tableauPlaceholder {
   z-index: -9999;
   margin:auto;
 }
 
-
-
+/* *********************************************************
+  Title Section
+********************************************************* */
 
 .section-title{
   flex: 0 0 100%;
