--- a/css/analysis.css
+++ b/css/analysis.css
@@ -21,10 +21,6 @@ p {
   margin:20px;
   margin-right: 80;
   margin-right: 80;
-
-
-
-
   font-size: 18px;
   line-height: 25px;
 }
@@ -38,6 +34,39 @@ p {
   position: relative;
 }
 
+/* *********************************************************
+  Title Section
+********************************************************* */
+.section-title{
+  flex: 0 0 100%;
+  max-width: 100%;
+  margin-bottom: 30px;
+  text-align: center;
+}
+.section-title h1{
+  display: inline-block;
+  font-size: 35px;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: #000000;
+  margin: 0 0 5px;
+  position: relative;
+  z-index: -1;
+}
+.section-title h1::before{
+  content: '';
+  left: 340px;
+  position: absolute;
+  height: 3px;
+  right: 32%;
+  background-color: rgb(0,128,26);
+  bottom: -5px;
+  z-index: -1;
+
+}
+.container .section-title h1::before{
+  left: 30%;
+}
 
 /* *********************************************************
 Menu Section
@@ -101,7 +130,6 @@ transform: translateY(-8px);
 .menu-btn:after{
 transform: translateY(8px);
 }
-
 
 .close {
 z-index: 1;
@@ -208,7 +236,6 @@ transition-timing-function: ease, cubic-bezier(.1,1.3,.3,1); /* easeOutBackã‚’ç·
 transform: translateX(-100px);
 }
 
-
 /* *********************************************************
   Table Section
 ********************************************************* */
@@ -229,7 +256,6 @@ th {
   border-color: white;
 
 }
-
 
 /* *********************************************************
   Sticky Header
@@ -259,34 +285,3 @@ th {
   padding-top: 102px;
 }
 
-
-.section-title{
-  flex: 0 0 100%;
-  max-width: 100%;
-  margin-bottom: 30px;
-  text-align: center;
-}
-.section-title h1{
-  display: inline-block;
-  font-size: 35px;
-  text-transform: uppercase;
-  font-weight: 700;
-  color: #000000;
-  margin: 0 0 5px;
-  position: relative;
-  z-index: -1;
-}
-.section-title h1::before{
-  content: '';
-  left: 340px;
-  position: absolute;
-  height: 3px;
-  right: 32%;
-  background-color: rgb(0,128,26);
-  bottom: -5px;
-  z-index: -1;
-
-}
-.container .section-title h1::before{
-  left: 30%;
-}
